@@ -186,6 +186,12 @@ void db_connect(const char *database, MYSQL *mysql) {
 		die("FATAL: MySQL options unable to set timeout value");
 	}
 
+	my_bool reconnect = 1;
+	options_error = mysql_options(mysql, MYSQL_OPT_RECONNECT, &reconnect);
+	if (options_error < 0) {
+		die("FATAL: MySQL options unable to set reconnect option\n");
+	}
+
 	while (tries > 0) {
 		tries--;
 
